css bugs +session

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -64,7 +64,7 @@
         </ul>
         </nav>
     </header>
-    <main class="">{% block content%} {%endblock%}
+    <main class="container">{% block content%} {%endblock%}
       
     </main>
     
