--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2,15 +2,11 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    box-sizing:border-box;
     font-family: 'Cute Font', cursive;
   }
 main{
   text-align: center;
   margin-bottom: 100px;
-}
-p.detail-font{
-font-size:16px;
 }
 .page-footer {
     position: fixed;
@@ -20,31 +16,32 @@ font-size:16px;
   }
 .home-img {
     display: flex;
-    width: 60%;
+    width: 50%;
     display: block;
     margin:0 auto;
   }
   img.player-img {
-    width: 100%;
-    height: 100%;
-    border: 25px;
+    width: 60%;
+    height: 60%;
+    border-radius: 50%;
     justify-content: center;
     align-items: center;
+    margin:0 auto;
   }
 
  .pokemon-img, .player-pokemon-img {
     display: flex;
-    width: 80%;
-    height: 80%;
+    width: 60%;
+    height: 60%;
     justify-content: center;
     align-items: center;
+    margin:0 auto;
   }
   .player-item-img
   {
     display: flex;
-    width: 60%;
-    height: 60%;
-    text-align: center;
+    width: 40%;
+    height: 40%;
     justify-content: center;
     align-items: center;
   }
@@ -55,6 +52,10 @@ font-size:16px;
     background-color: chartreuse;
     border-radius: 5px;
   }
+  span.badge.green{
+    color:white;
+    font-size: 18px;
+  }
 
   .item-card,.pokemon-card{
     display: flex;
@@ -63,8 +64,13 @@ font-size:16px;
     justify-content: center;
     text-align: center;
   }
-  
+ div.car-action{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ }
 
 *, nav ul a, label{
-  font-size:20px;
+  font-size:18px;
 }
