--- a/main_app/templates/player/player_form.html
+++ b/main_app/templates/player/player_form.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block title %}
 <title>Create Player | Pokemon World</title>
 {% endblock %}
 {% block content %}
-<form action="{% url 'player_create' %}" method="POST">
+<form action="{% url "player_create" %}" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" value="Submit" class="btn blue" />
