--- a/main_app/templates/pokemons/pokemon_confirm_delete.html
+++ b/main_app/templates/pokemons/pokemon_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}
+{% extends "base.html" %} {% block title %}
 <title>Release {{pokemon.name}}</title>
 {% endblock %} {% block content %}
 <h4>Are you sure you want to Release {{pokemon.name}} ?</h4>
@@ -6,6 +6,6 @@
 <form method="POST">
   {% csrf_token %}
   <input type="submit" value="Yes - Release {{pokemon.name}}" class="btn" />
-  <a href="{% url 'pokemon_detail' pokemon.id %}" class="btn blue">No!</a>
+  <a href="{% url "pokemon_detail" pokemon.id %}" class="btn blue">No!</a>
 </form>
 {% endblock %}
